fix: Horizontal Scrolling Not Working

--- a/src/widget/style.css
+++ b/src/widget/style.css
@@ -24,7 +24,13 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
-  
+
+.mdc-list {
+    max-height: calc(100vh - 60px);
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
 .icon-drawer2:before {
     content: "\e95d";
 }
